--- a/app/src/main/res/layout/recycler_financial_list_view.xml
+++ b/app/src/main/res/layout/recycler_financial_list_view.xml
@@ -2,11 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="60dp">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,9 +18,9 @@
             <TextView
                 android:id="@+id/row_text_result"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="60dp"
                 android:layout_weight="4"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:padding="10sp"
                 android:text="date1"
                 android:textSize="12sp"></TextView>
@@ -28,9 +28,9 @@
             <TextView
                 android:id="@+id/row_text_result2"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:layout_weight="4"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:padding="10sp"
                 android:text="item1"
                 android:textSize="12sp"></TextView>
@@ -38,9 +38,9 @@
             <TextView
                 android:id="@+id/row_text_result3"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="60dp"
                 android:layout_weight="4"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:padding="10sp"
                 android:text="price1"
                 android:textSize="12sp"></TextView>
