--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -152,6 +152,7 @@
             android:layout_marginBottom="240dp"
             android:background="@color/_bg__intro_ek2_color"
             android:gravity="top"
+            app:layout_constraintBottom_toTopOf="@+id/iv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -396,6 +397,7 @@
             android:textColor="@color/babygage_color"
             android:textSize="12dp"
             android:textStyle="italic"
+            app:layout_constraintBottom_toTopOf="@+id/rectangle_33"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.242"
             app:layout_constraintStart_toStartOf="parent"
@@ -443,6 +445,7 @@
             android:layout_marginBottom="76dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/my_expenditure___household_ledger"
             app:layout_constraintVertical_bias="0.152"
             tools:listitem="@layout/recycler_list_view" />
 
