--- a/app/src/main/res/layout/activity_financial_mypage.xml
+++ b/app/src/main/res/layout/activity_financial_mypage.xml
@@ -58,6 +58,7 @@
     <TextView
         android:id="@+id/financial_my"
         android:layout_width="177.5dp"
+        android:layout_marginTop="20dp"
         android:layout_height="41.5dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -74,6 +75,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
+
+    <Button
+        android:id="@+id/btn_year_month_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="5dp"
+        android:backgroundTint="@color/lightgrey"
+        android:text="Year Month Picker Dialog"
+        android:textColor="#000000"
+        android:textSize="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
@@ -174,16 +193,15 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/generate"
                     android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:background="@color/rectangle_5_ek1_color"
-                    android:backgroundTint="#87ceeb"
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/edge"
                     android:text="generate"
                     android:textColor="@color/black"
                     android:textSize="10dp"
-                    app:backgroundTint="@color/rectangle_5_ek1_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.317"
@@ -191,17 +209,16 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.956" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/delete"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:background="@color/_rectangle_23_color"
-                    android:backgroundTint="#87ceeb"
+                    android:background="@drawable/edge"
+
                     android:text="Delete"
                     android:textColor="@color/black"
                     android:textSize="10dp"
-                    app:backgroundTint="@color/rectangle_5_ek1_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.716"
@@ -214,16 +231,17 @@
         <TextView
             android:id="@+id/financial_my2"
             android:layout_width="177.5dp"
-            android:layout_height="41.5dp"
+            android:layout_height="30.5dp"
+            android:layout_marginTop="10dp"
             android:layout_below="@+id/lin"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginLeft="21dp"
-
+            android:layout_marginBottom="10dp"
             android:text="Financial Audit Table"
             android:textColor="@color/babygage_color"
             android:textSize="14dp"
-            android:textStyle="italic" />
+            android:textStyle="bold" />
 
         <TableLayout
 
@@ -235,7 +253,7 @@
             android:layout_alignParentBottom="true"
             android:background="@android:color/white">
             <!-- Table Heading-->
-            <TableRow android:background="@color/teal_200">
+            <TableRow android:background="@color/bluemint">
 
                 <TextView
                     android:layout_width="0dp"
@@ -293,6 +311,8 @@
             android:id="@+id/barchart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/rectangle_52_ek1_shape"
             android:backgroundTint="#87ceeb"
             android:text="Go to Chart Dashboard !"
@@ -304,11 +324,12 @@
             android:id="@+id/excelbtn"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:backgroundTint="@color/bluemint"
             android:text="ExcelSave"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            app:backgroundTint="@color/rectangle_5_ek1_color" />
+            android:textStyle="bold"/>
 
 
     </LinearLayout>
