--- a/app/src/main/res/layout/activity_household_mypage.xml
+++ b/app/src/main/res/layout/activity_household_mypage.xml
@@ -135,7 +135,7 @@
         android:layout_marginBottom="543dp"
         android:background="@android:color/white">
         <!-- Table Heading-->
-        <TableRow android:background="@color/teal_200">
+        <TableRow android:background="@color/_rectangle_59_color">
 
             <TextView
                 android:layout_width="0dp"
@@ -144,7 +144,7 @@
                 android:gravity="center_horizontal"
                 android:padding="10sp"
                 android:text="Date"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textSize="10sp">
 
             </TextView>
@@ -156,7 +156,7 @@
                 android:gravity="center_horizontal"
                 android:padding="10sp"
                 android:text="Product Name"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textSize="10sp">
 
             </TextView>
@@ -168,7 +168,7 @@
                 android:gravity="center_horizontal"
                 android:padding="10sp"
                 android:text="Total Price"
-                android:textColor="@android:color/white"
+                android:textColor="@color/black"
                 android:textSize="10sp">
 
             </TextView>
@@ -311,12 +311,12 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/generate"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                app:backgroundTint="@color/_rectangle_59_color"
+                android:layout_height="wrap_content"
                 android:text="generate"
+                android:background="@drawable/edge2"
                 android:textColor="@color/black"
                 android:textSize="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -326,15 +326,15 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.956" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/delete"
                 android:layout_width="wrap_content"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                app:backgroundTint="@color/_rectangle_59_color"
                 android:text="Delete"
                 android:textColor="@color/black"
                 android:textSize="10dp"
+                android:background="@drawable/edge2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.716"
@@ -348,7 +348,7 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_below="@+id/view"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="38dp"
         android:layout_marginBottom="0dp"
         tools:listitem="@layout/recycler_financial_list_view" />
 
@@ -359,13 +359,15 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="32dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="151dp"
         android:background="@drawable/_rectangle_59_shape"
-        app:backgroundTint="@color/_rectangle_59_color"
         android:text="Go to Chart Dashboard !"
         android:textColor="@color/black"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:backgroundTint="@color/_rectangle_59_color" />
 
 
 </RelativeLayout>
