--- a/app/src/main/res/layout/activity_financial_mypage.xml
+++ b/app/src/main/res/layout/activity_financial_mypage.xml
@@ -76,24 +76,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
-    <Button
-        android:id="@+id/btn_year_month_picker"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="5dp"
-        android:backgroundTint="@color/lightgrey"
-        android:text="Year Month Picker Dialog"
-        android:textColor="#000000"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32" />
-
     <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
@@ -227,21 +209,50 @@
 
             </LinearLayout>
         </LinearLayout>
-
         <TextView
             android:id="@+id/financial_my2"
             android:layout_width="177.5dp"
             android:layout_height="30.5dp"
-            android:layout_marginTop="10dp"
             android:layout_below="@+id/lin"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginLeft="21dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="0dp"
             android:text="Financial Audit Table"
             android:textColor="@color/babygage_color"
             android:textSize="14dp"
             android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+            android:id="@+id/btn_year_month_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="36dp"
+            android:layout_gravity="left"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="-20dp"
+            android:backgroundTint="@color/lightgrey"
+            android:text="Year/Month"
+            android:textColor="#000000"
+            android:textSize="10dp" />
+
+            <TextView
+                android:id="@+id/yearMonth"
+                android:hint="year/month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="3dp"
+                android:layout_weight="1"
+                android:textSize="14dp" />
+        </LinearLayout>
+
+
 
         <TableLayout
 
