--- a/app/src/main/res/layout/activity_set_image.xml
+++ b/app/src/main/res/layout/activity_set_image.xml
@@ -189,7 +189,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Product name / price"
+        android:text="Product name "
         android:textAlignment="viewStart"
         app:layout_constraintBottom_toTopOf="@+id/rectangle_3"
         app:layout_constraintEnd_toEndOf="@+id/rectangle_32_ek1"
